# modular-nested-exponentiation

./: .readthedocs.yaml  Dockerfile  README.md  docker-compose.yml  modular-nested-exponentiation.ipynb  notebook.ipynb  pytest.ini  setup.cfg  setup.py
.github/workflows/: release.yml  test.yml
docs/: requirements.txt
docs/source/: conf.py  index.rst
docs/source/_build/html/: .buildinfo  about.html  genindex.html  index.html  install.html  objects.inv  search.html  searchindex.js  todo.html
docs/source/_build/html/.doctrees/: about.doctree  environment.pickle  index.doctree  install.doctree  todo.doctree
docs/source/_build/html/_sources/: about.rst.txt  index.rst.txt  install.rst.txt  todo.rst.txt
docs/source/_build/html/_static/: bootstrap-sphinx.css
src/mod_nest_exp/: __init__.py  core.py  gcd.py  utils.py
src/mod_nest_exp/benchmarking/: benchmark.py  utils.py
src/mod_nest_exp/core/: core.py  utils.py
src/mod_nest_exp/core/benchmarks/: __init__.py  benchmark_core.py
src/mod_nest_exp/core/tests/: __init__.py  test_core.py
src/mod_nest_exp/prelims/: __init__.py  factor.py  gcd.py  primes.py  small_primes.py  totient.py
src/mod_nest_exp/testing/: __init__.py  base_test.py  utils.py
tests/: test_core.py
