[metadata]
name = mod-nest-exp
version = 1.0.9
description = An algorithm that computes modular nested exponentiation efficiently. 
long_description = file: README.md
long_description_content_type = text/markdown
author = Aviv Brook
author_email = avbrook@ucsc.edu
url = https://github.com/avivbrook/modular-nested-exponentiation
project_urls =
    Bug Tracker = https://github.com/avivbrook/modular-nested-exponentiation/issues
    CI = https://github.com/avivbrook/modular-nested-exponentiation/actions
classifiers =
    Framework :: Jupyter
    Topic :: Education
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Software Development :: Libraries :: Python Modules
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Operating System :: OS Independent
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
license_file = LICENSE
keywords = modular exponentiation, nested exponentiation
platform = any

[options]
python_requires = >= 3.6
package_dir=
    =src
packages = find:

[options.packages.find]
where=src