[metadata]
name = mod-nest-exp
version = attr: mod_nest_exp.__version__
url = https://github.com/avivbrook/modular-nested-exponentiation
project_urls =
    Bug Tracker = https://github.com/avivbrook/modular-nested-exponentiation/issues
    Coverage = https://app.codecov.io/gh/avivbrook/modular-nested-exponentiation
    CI = https://github.com/avivbrook/modular-nested-exponentiation/actions
author = Aviv Brook
author_email = avbrook@ucsc.edu
classifiers =
    Topic :: Education
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Software Development :: Libraries :: Python Modules
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Operating System :: OS Independent
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
license = GPLv3
license_file = LICENSE
description = An algorithm that computes modular nested exponentiation efficiently. 
long_description = file: README.md
long_description_content_type = text/markdown
keywords = modular exponentiation, nested exponentiation
platforms = any

[options]
zip_safe = False
include_package_data = true
python_requires = >= 3.6
packages = find:
package_dir=
    =src
install_requires = setuptools

[options.packages.find]
where = src

[options.extras_require]
docs = Sphinx
sympy = sympy
gmpy = gmpy2
all =
    sympy~=1.7
    gmpy2~=2.0
    Sphinx~=3.5

[options.package_data]
mod_nest_exp = py.typed

[coverage:run]
branch = True
source = src/mod_nest_exp/core
omit =
    */benchmarks/*
    */tests/*